--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  max-width: 375px;
+  min-width: 320px;
+  max-width: 385px;
   font-family: "Pacifico", cursive;
   font-weight: 400;
   font-style: normal;
